# simgui

./: CMakeLists.txt  README.md  simgui.cpp  simgui.h
examples/1-game-of-life/: .gitignore  CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  main.cpp  pch.h
src/: simgui.cpp
